[package]
name = "candle-diffusion"
version = "0.1.0"
edition = "2024"

[dependencies]
candle = { package = "candle-core", version = "0.10.2" }
candle-nn = "0.10.2"
candle-transformers = "0.10.2"
hf-hub = { version = "0.4.1", features = ["tokio"] }
tokenizers = { version = "0.22.0", default-features = false, features = ["onig"] }
safetensors = "0.7.0"
image = { version = "0.25.2", default-features = false, features = ["jpeg", "png"] }
clap = { version = "4.6", features = ["derive"] }
anyhow = { version = "1.0.98", features = ["backtrace"] }
rand = "0.9.0"
num-traits = "0.2"
tokio = { version = "1", features = ["full"] }

[features]
default = []
accelerate = ["candle/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]
cuda = ["candle/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["candle/metal", "candle-nn/metal"]
